# NetoworkPortScanner

./: CMakeLists.txt  README.md  appConfig.h  appState.h  main.cpp
CoreLogic/: CoreManager.cpp  CoreManager.h  networkScanLogic.cpp  networkScanLogic.h
GUI/: GUIGeneration.cpp  GUIGeneration.h  GUIManager.cpp  GUIManager.h
imGUI/backend/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.h
